# laptop-api

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
electronics/: settings.py  urls.py
laptop/: models.py  serializers.py  tests.py  urls.py  views.py
laptop/migrations/: 0001_initial.py
